--- a/client/bbs/bbsInsert.html
+++ b/client/bbs/bbsInsert.html
@@ -2,25 +2,24 @@
     <div class="container">
         <div class="row clearfix">
             <div class="col-md-12 column">
-                    <p></p>
-                    <div class="form-group">
-                        <label>제목</label><input type="text" class="form-control" name="title">
-                    </div>
+                <p></p>
 
-                    <div class="form-group">
-                        <label>등록자</label><input type="text" class="form-control" name="regName">
-                    </div>
+                <div class="form-group">
+                    <label>제목</label><input type="text" class="form-control" name="title">
+                </div>
 
-                    <div class="form-group">
-                        <label>본문</label><p><textarea cols="160" rows="10" name="context"></textarea></p>
-                    </div>
+                <div class="form-group">
+                    <label>본문</label>
 
-                    <div class="form-group">
-                        <label for="exampleInputFile">첨부</label><input type="file" id="exampleInputFile">
-                    </div>
+                    <p><textarea cols="160" rows="10" name="context"></textarea></p>
+                </div>
 
-                    <button class="btn btn-success" name="bBbsReg">확인</button>
-                    <a href="/bbs" class="btn btn-info">돌아가기</a>
+                <div class="form-group">
+                    <label for="exampleInputFile">첨부</label><input type="file" id="exampleInputFile">
+                </div>
+
+                <button class="btn btn-success" name="bBbsReg">확인</button>
+                <a href="/bbs" class="btn btn-info">돌아가기</a>
             </div>
         </div>
     </div>
