--- a/client/bbs/bbsMod.html
+++ b/client/bbs/bbsMod.html
@@ -3,6 +3,7 @@
         <div class="row clearfix">
             <div class="col-md-12 column">
                 <p></p>
+
                 <div class="form-group">
                     <label>제목</label><input type="text" class="form-control" name="modTitle" value="{{bbsOneTitle}}">
                 </div>
@@ -12,7 +13,9 @@
                 </div>
 
                 <div class="form-group">
-                    <label>본문</label><p><textarea cols="160" rows="10" name="modContext" value="{{bbsOneContext}}"></textarea></p>
+                    <label>본문</label>
+
+                    <p><textarea cols="160" rows="10" name="modContext" value="{{bbsOneContext}}"></textarea></p>
                 </div>
 
                 <div class="form-group">
