사용자 아이디로 등록

--- a/client/bbs/bbs.html
+++ b/client/bbs/bbs.html
@@ -39,6 +39,7 @@
                                 {{/each}}
                                 </tbody>
                             </table>
+                            <!--a href="{{pathFor 'bbsInsert'}}" name="bReg" class="btn btn-success">등록</a-->
                             <a href="/bbsInsert" name="bReg" class="btn btn-success">등록</a>
                             <button type="button" name="bDel" class="btn btn-danger">삭제</button>
                         </div>
