--- a/client/bbs/bbsInsert.html
+++ b/client/bbs/bbsInsert.html
@@ -1,4 +1,5 @@
 <template name="bbsInsert">
+    <form class="main form">
     <div class="container">
         <div class="row clearfix">
             <div class="col-md-12 column">
@@ -15,14 +16,16 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="exampleInputFile">첨부</label><input type="file" id="exampleInputFile">
+                    <label for="exampleInputFile">첨부</label>
+                    <input type="file" name="fileUpload">
+                    <input type="hidden" name="fileInsertList">
                 </div>
 
-                <button class="btn btn-success" name="bBbsReg">확인</button>
+                <input type="submit" class="btn btn-success" value="확인"/>
                 <a href="/bbs" class="btn btn-info">돌아가기</a>
             </div>
         </div>
     </div>
-
+    </form>
 </template>
 
